--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+twister-core (0.9.28.0-1~deb7u+1) stable; urgency=medium
+
+  * BAckport to Wheezy
+
+ -- Kill Your TV <killyourtv@i2pmail.org>  Fri, 05 Dec 2014 19:49:44 +0000
+
 twister-core (0.9.28.0-1) unstable; urgency=medium
 
   [ Miguel Freitas ]
@@ -12,12 +18,6 @@ twister-core (0.9.28.0-1) unstable; urgency=medium
   * New upstream release
 
  -- Kill Your TV <killyourtv@i2pmail.org>  Thu, 04 Dec 2014 23:34:50 +0000
-
-twister-core (0.9.27.0-1~deb7u+1) stable; urgency=medium
-
-  * Backport to Wheezy
-
- -- Kill Your TV <killyourtv@i2pmail.org>  Sat, 29 Nov 2014 18:04:18 +0000
 
 twister-core (0.9.27.0-1) unstable; urgency=medium
 
