--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,40 @@
+twister-core (0.9.28.0+git20141217.r4917-1) unstable; urgency=medium
+
+  [ Miguel Freitas ]
+  * params update
+  * new dns seeder
+  * fix compilation for android which uses boost::posix_time::ptime
+    (TORRENT_USE_BOOST_DATE_TIME)
+  * fix strange android compilation failure (The file boost/detail/endian.hpp
+    needs to be set up for your CPU type)
+
+  [ FoundationAwesome ]
+  * Update building-on-ubuntu-debian.md
+
+  [ Miguel Freitas ]
+  * rpc for development only - generates crypto testvector * fix #303
+  * new rpc dhtputraw
+  * very simple wrapper for starting twisterd and launching the web browser
+    generates a default rpcpassword, twister.conf file etc. may also setup
+    automatic twisterd script on desktop login.
+  * remove bitcoin icons, add twister icons
+  * sample desktop files
+  * more category definitions to please opensuse
+  * detect system-wide twister-html
+  * fix for picky compiler complaining about no return
+  * create config dir
+  * do not depend on tkinter for cmd line usage (only GUI require it)
+  * install twister-control script
+  * install pixmaps (icons) and desktop files
+
+  [ Johannes Schwab ]
+  * Force unsing python2
+
+  [ Kill Your TV ]
+  * New upstream git snapshot
+
+ -- Kill Your TV <killyourtv@i2pmail.org>  Thu, 01 Jan 2015 16:03:36 +0000
+
 twister-core (0.9.28.0-1) unstable; urgency=medium
 
   [ Miguel Freitas ]
