--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+twister-core (0.9.28.0+git20150310.r4934-1~deb7u+1) stable; urgency=medium
+
+  * Backport to Wheezy
+
+ -- Kill Your TV <killyourtv@i2pmail.org>  Fri, 27 Mar 2015 20:55:20 +0000
+
 twister-core (0.9.28.0+git20150310.r4934-1) unstable; urgency=medium
 
   [ Miguel Freitas ]
@@ -66,12 +72,6 @@ twister-core (0.9.28.0+git20141217.r4917-1) unstable; urgency=medium
   * New upstream git snapshot
 
  -- Kill Your TV <killyourtv@i2pmail.org>  Thu, 01 Jan 2015 16:03:36 +0000
-
-twister-core (0.9.28.0-1~deb7u+1) stable; urgency=medium
-
-  * BAckport to Wheezy
-
- -- Kill Your TV <killyourtv@i2pmail.org>  Fri, 05 Dec 2014 19:49:44 +0000
 
 twister-core (0.9.28.0-1) unstable; urgency=medium
 
