--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+twister-core (0.9.29.0-1~deb7u+1) stable; urgency=medium
+
+  * Backport to Wheezy
+
+ -- Kill Your TV <killyourtv@i2pmail.org>  Sat, 11 Apr 2015 08:31:08 +0000
+
 twister-core (0.9.29.0-1) unstable; urgency=medium
 
   [ Bernard Spil ]
@@ -24,12 +30,6 @@ twister-core (0.9.29.0-1) unstable; urgency=medium
   * New upstream release
 
  -- Kill Your TV <killyourtv@i2pmail.org>  Fri, 10 Apr 2015 22:24:34 +0000
-
-twister-core (0.9.28.0+git20150310.r4934-1~deb7u+1) stable; urgency=medium
-
-  * Backport to Wheezy
-
- -- Kill Your TV <killyourtv@i2pmail.org>  Fri, 27 Mar 2015 20:55:20 +0000
 
 twister-core (0.9.28.0+git20150310.r4934-1) unstable; urgency=medium
 
