--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+twister-core (0.9.29.0-1ubuntu1) vivid; urgency=medium
+
+  * Building for Vivid
+
+ -- Kill Your TV <killyourtv@i2pmail.org>  Sat, 11 Apr 2015 10:44:53 +0000
+
 twister-core (0.9.29.0-1) unstable; urgency=medium
 
   [ Bernard Spil ]
